--- a/AGE System/translations/fr.json
+++ b/AGE System/translations/fr.json
@@ -152,15 +152,15 @@
    "show-the-corruption-section-info": "Show the Corruption section. This can be shown for Blue Rose.",
    "show-the-ammo-column-info": "Show the Ammo column. This can be hidden for Blue Rose.",
    "show-the-money/currency-section-info": "Show the Money/Currency section. This can be hidden for Blue Rose.",
-   "origin-u": "ORIGIN",
+   "origin-u": "ORIGINE",
    "drive-u": "DRIVE",
    "profession-u": "PROFESSION",
-   "appearance-u": "APPEARANCE",
-   "belter": "Belter",
-   "martian": "Martian",
-   "earther": "Earther",
-   "fortune-u": "FORTUNE",
-   "outsider": "Outsider",
+   "appearance-u": "APPARENCE",
+   "belter": "Ceinturien",
+   "martian": "Martien",
+   "earther": "Terrien",
+   "fortune-u": "CHANCE",
+   "outsider": "Extérieur",
    "lower-class": "Lower Class",
    "middle-class": "Middle Class",
    "upper-class": "Upper Class"
