--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
@@ -149,7 +149,7 @@
     "leicht": "légèrement",
     "legendaer": "Légendaire (2100 PAV)",
     "leiteigenschaft": "Qualité principale",
-    "leiteigschadensb": "Qual. Princ. + Bonus PI",
+    "leiteigschadensb": "Q + SD",
     "liegend": "&Agrave; terre",
     "magie": "Magie",
     "malus": "Malus",
@@ -212,7 +212,7 @@
     "schicksalspunkte": "Points de destin",
     "schilde": "Boucliers",
     "schild-waffe": "Bouclier/Arme",
-    "schilde-waffen": "Schilde/Zweitwaffen",
+    "schilde-waffen": "Boucliers/Armes secondaires",
     "schilde-und-nebenhandwaffen": "Boucliers et armes de main non directrice",
     "schildparade-parierwaffe": "Parade au bouclier",
     "schips": "DES",
@@ -648,12 +648,12 @@
     "add_effekt": "Ajouter un modificateur d'effet",
     "quelle-auswaehlen": "Sélectionner la source",
     "weitere-merkmale": "Autres domaines",
-    "bruchfaktor": "Bruchfaktor",
-    "strukturpunkte": "Strukturpunkte",
-    "temp-modifikatoren": "temp. Mod.:",
+    "bruchfaktor": "Facteur de rupture",
+    "strukturpunkte": "Points de structure",
+    "temp-modifikatoren": "Mod. temp. :",
     "AT": "AT",
-    "PA": "PA",
-    "TP": "TP",
-    "FK": "FK",
-    "rucksack": "Rucksack"
+    "PA": "PRD",
+    "TP": "PI",
+    "FK": "CD",
+    "rucksack": "Sac à dos"
 }
