--- a/SavageWorlds-Tabbed/translations/es.json
+++ b/SavageWorlds-Tabbed/translations/es.json
@@ -48,7 +48,7 @@
     "range": "Alcance",
     "base": "Base",
     "mod": "Mod",
-    "armor": "Armad.",
+    "armor": "Armadura",
     "current": "Actual",
     "academics-stat": "Humanidades",
     "academics": "Humanidades",
@@ -209,7 +209,7 @@
     "focus": "Focus",
     "gambling": "Apostar",
     "guts": "Redaños",
-    "hacking": "Hacking",
+    "hacking": "Ordenadores",
     "healing": "Medicina",
     "intimidation": "Intimidar",
     "investigation": "Investigación",
@@ -441,7 +441,7 @@
     "low-life": "Low Life",
     "tour-of-darkness": "Tour of Darkness",
     "additional-derived-stats": "Valores Derivados Adicionales",
-    "derived-stats": "Derived Stats",
+    "derived-stats": "Atributos derivados",
     "academic-text": "Para marcar las notas de un personaje. ETU usa este campo.",
     "corruption-text": "Para marcar la corrupción de un personaje. Settings como Lankhmar usan este campo.",
     "fame-text": "Para marcar la fama de un personaje. Settings como Pirates of the Spanish Main lo usan.",
@@ -705,13 +705,13 @@
     "edge-desc": "Edge description/details",
     "whisper-edge": "Whisper Edge Description",
     "edge-type": "Type or Took at...",
-    "advancements": "Advancements",
+    "advancements": "Avances",
     "shaken": "Aturdido",
     "incapacitated-abbr": "Inc",
     "incapacitated": "Incapacitated",
     "iron-tiks": "Tiks",
     "silver-smerduks": "Smerduks",
-    "money": "Money",
+    "money": "Dinero",
     "pieces-of-eight": "Pieces of Eight",
     "money-clams": "Clams",
     "money-credits": "Credits",
@@ -728,10 +728,10 @@
     "manually-set-rank": "Manually set Rank",
     "use-charisma": "Use Charisma",
     "use-charisma-desc": "Check this box to use the Charisma attribute found in editions prior to the Adventure Edition",
-    "rate-of-fire-abbr": "ROF",
+    "rate-of-fire-abbr": "CAD",
     "weight-abbr": "Wt",
-    "number-of-shots-shortened": "Shots",
-    "weapons": "Weapons",
+    "number-of-shots-shortened": "Mun.",
+    "weapons": "Armas",
     "attack-and-damage-abbr": "Atk + Dmg",
     "multi-attack-and-damage-abbr": "Atk<sup>x</sup>+Dmg",
     "damage-only": "Damage Only",
@@ -751,16 +751,16 @@
     "distracted": "Distraido",
     "vulnerable": "Vulnerable",
     "stunned": "Conmocionado",
-    "armor-piercing-abbr-u": "AP",
-    "strength-abbr": "Str",
-    "agility-abbr": "Agl",
-    "smarts-abbr": "Sma",
-    "spirit-abbr": "Spi",
+    "armor-piercing-abbr-u": "PA",
+    "strength-abbr": "Fue",
+    "agility-abbr": "Agi",
+    "smarts-abbr": "Ast",
+    "spirit-abbr": "Esp",
     "vigor-abbr": "Vig",
     "total-weapon-weight-carried": "Total Weapon Weight Carried",
     "total-gear-weight-carried": "Total Gear Weight Carried",
-    "powers": "Powers",
-    "power": "Power",
+    "powers": "Poderes",
+    "power": "Poder",
     "ab-section-header": "Section Header: ",
     "ab-column-header": "Column Header: ",
     "ab-pp": "Power Points Abbreviation: ",
@@ -770,14 +770,14 @@
     "invested": "invested",
     "power-point-abbr-u": "PP",
     "power-point-abbr-u-invested": "PP Invested",
-    "power-points": "Power Points",
+    "power-points": "Puntos de poder",
     "potential-psychic-energy-abbr-u": "PPE",
     "skill-only": "Skill Only",
     "enable": "Enable",
     "augmentation": "Augmentation",
     "experience-points-abbr-u-advances": "XP (Advances)",
     "experience-points-text": "Change the Advances designation used to determine rank to XP.",
-    "experience-points-abbr-u": "XP",
+    "experience-points-abbr-u": "EXP",
     "advances": "Advances",
     "class": "Class",
     "threat": "Threat",
@@ -877,7 +877,7 @@
     "release-p1v1": "Release Notes page info coming soon",
     "journal-p1v1": "Journal page info coming soon",
     "vehicle-p1v1": "Vehicles page info coming soon",
-    "unshake": "Unshake",
+    "unshake": "Eliminar aturdimiento",
     "unshake-desc1": "attempts to unshake (Spi",
     "unshake-desc2": "Wild",
     "unshake-desc3": "and",
@@ -885,7 +885,7 @@
     "unshake-desc5": "can now act",
     "unshake-desc6": "fails",
     "show-unshake-button": "Show Unshake Button",
-    "soak": "Soak",
+    "soak": "Absorción",
     "show-soak-button": "Show Soak Button",
     "item": "Item",
     "trappings": "Trappings",
