--- a/Star Wars FFG API-Compatible/translations/es.json
+++ b/Star Wars FFG API-Compatible/translations/es.json
@@ -14,7 +14,7 @@
   "advantage": "Ventaja",
   "advisor": "Advisor",
   "advocate": "Advocate",
-  "aft": "Aft",
+  "aft": "Popa",
   "age:": "Edad:",
   "ageofrebellion": "Era de la Rebelión",
   "aggressor": "Aggressor",
@@ -51,10 +51,10 @@
   "attacks": "Ataques",
   "availablexp": "PE disponibles:",
   "bardottan": "Bardottan",
-  "basemodifiers": "Base Modifiers",
+  "basemodifiers": "Modificadores básicos",
   "baseofoperations": "&emsp;Base of Operations &emsp;",
   "basexp:": "Base XP:",
-  "beast": "&emsp;Beast&emsp;",
+  "beast": "&emsp;Montura&emsp;",
   "beastcriticalinjuries": "Beast Critical Injuries",
   "beastrider": "Beast Rider",
   "besalisk": "Besalisk",
@@ -72,7 +72,7 @@
   "Brawl": "Pelea",
   "brawlbr": "Pelea (For)",
   "brawn": "Fortaleza",
-  "build:": "Build:",
+  "build:": "Complexión:",
   "business": "Business",
   "businessname:": "Business Name:",
   "caamasi": "Caamasi",
@@ -123,7 +123,7 @@
   "Computers": "Computadoras",
   "computers": "Computadoras",
   "condition:": "Condición:",
-  "conflict:": "Conflict:",
+  "conflict:": "Conflicto:",
   "consular": "Consular",
   "consumables:": "Consumibles:",
   "continent:": "Continente:",
@@ -165,7 +165,7 @@
   "cybernetics": "Cybernetics",
   "cybertech": "Cyber Tech",
   "damage": "Daño",
-  "dark": "Dark",
+  "dark": "Oscuro",
   "deception": "Engaño",
   "Deception": "Engaño",
   "deceptioncun": "Engaño (Ast)",
@@ -191,7 +191,7 @@
   "displayinskill": "Display in Skill",
   "dmg": "Daño",
   "doctor": "Doctor",
-  "downgrade": ":Downgrade",
+  "downgrade": ":Rebajar",
   "drall": "Drall",
   "dresselliannp": "Dressellian (Non-Primitive)",
   "dressellianp": "Dressellian (Primitive)",
@@ -201,14 +201,14 @@
   "dropoff": "Dropoff",
   "dug": "Dug",
   "duros": "Duros",
-  "duty": "Duty",
+  "duty": "Deber",
   "edgeoftheempire": "Al Filo del Imperio",
   "education": "Educación",
   "Education": "Educación",
   "educationint": "Educación (Int)",
   "effect:": "Efecto:",
-  "emostrength:": "Emotional Strength(s):",
-  "emoweaknaess:": "Emotional Weakness(es):",
+  "emostrength:": "Fortaleza(s) emocional(es):",
+  "emoweaknaess:": "Debilidad(es) emocional(es):",
   "enablecombatsuggestions": "¿Activar sugerencias de combate?",
   "enablegeneralsuggestions": "¿Activar sugerencias generales?",
   "encum": "Encum",
@@ -241,7 +241,7 @@
   "forcerating": "Dominio de la Fuerza",
   "forcesensitiveemergent": "Force Sensitive Emergent",
   "forcesensitiveexile": "Force Sensitive Exile",
-  "fore": "Fore",
+  "fore": "Proa",
   "fringer": "Fringer",
   "gadgeteer": "Gadgeteer",
   "galaxymapgridcoordinates:": "Galaxy Map Grid Coordinates:",
@@ -250,7 +250,7 @@
   "gandl": "Gand (With Lungs)",
   "gandnl": "Gand (Without Lungs)",
   "gank": "Gank",
-  "gender:": "Gender:",
+  "gender:": "Género:",
   "generalinfo": "General Info",
   "generalinformation": "General Information",
   "generalskills": "General Skills",
@@ -279,9 +279,9 @@
   "gunneryagi": "Artillería (Agi)",
   "gunslinger": "Gunslinger",
   "hair:": "Pelo:",
-  "handling": "Handling",
-  "hardpoints": "Hard Points",
-  "hardpoints:": "Hard Points:",
+  "handling": "Manejo",
+  "hardpoints": "Ensamblajes",
+  "hardpoints:": "Ensamblajes:",
   "heal": "Heal",
   "healer": "Healer",
   "heavy": "Heavy",
@@ -294,7 +294,7 @@
   "hook:": "Hook:",
   "hotshot": "Hotshot",
   "hp": "HP",
-  "hulltrauma": "Hull Trauma",
+  "hulltrauma": "Daños en el casco",
   "hulltypeclass:": "Hull Type/Class:",
   "human": "Human",
   "hunter": "Hunter",
@@ -329,9 +329,9 @@
   "Leadership": "Liderazgo",
   "leadershippre": "Liderazgo (Pre)",
   "legal": "Legal?",
-  "light": "Light",
-  "lightsaber": "Lightsaber",
-  "Lightsaber": "Lightsaber",
+  "light": "Luminoso",
+  "lightsaber": "Sable de luz",
+  "Lightsaber": "Sable de luz",
   "location": "Localización",
   "location:": "Localización:",
   "long": "Long",
@@ -360,7 +360,7 @@
   "medic": "Medic",
   "medium": "Medium",
   "meetingcenter": "Meeting Center",
-  "melee": "Armas cuerpo a cuerpo",
+  "melee": "Arm. c. a c.",
   "Melee": "Armas cuerpo a cuerpo",
   "meleeshort": "Armas cuerpo a cuerpo",
   "meleebr": "Armas cuerpo a cuerpo (For)",
@@ -387,8 +387,8 @@
   "modifiers:": "Modifiers:",
   "mods": "Mods",
   "moncalamari": "Mon Calamari",
-  "morality": "Morality",
-  "morality:": "Morality:",
+  "morality": "Moralidad",
+  "morality:": "Moralidad:",
   "moreinfo": "For more information on this version visit:",
   "motivations": "Motivations",
   "mustafariann": "Mustafarian (Northern)",
@@ -418,7 +418,7 @@
   "none": "None",
   "nonostarted": "No - Not Started",
   "noskill": "No Skill",
-  "notablefeatures": "Notable Features",
+  "notablefeatures": "Rasgos destacados",
   "notes": "&emsp; &emsp;Notes&emsp; &emsp;",
   "notes:": "Notes:",
   "npc": "NPC",
@@ -436,7 +436,7 @@
   "off": "Off",
   "on": "On",
   "option": "Option",
-  "other": "Other",
+  "other": "Otro",
   "othergear": "Other Gear",
   "otherinformations": "Otra información",
   "otherskills": "Otras habilidades",
@@ -446,8 +446,8 @@
   "outlawtech": "Outlaw Tech",
   "page:": "Page:",
   "partycareerskill:": "Party Career Skill:",
-  "passengername": "Passenger Name",
-  "passengers": "Passengers",
+  "passengername": "Nombre del pasajero",
+  "passengers": "Pasajeros",
   "passive": "Passive",
   "pathfinder": "Pathfinder",
   "pc": "PC",
@@ -469,16 +469,16 @@
   "pilotings": "Pilotar vehículo espacial",
   "pilotingsag": "Pilotar vehículo espacial (Agi)",
   "planet:": "Planeta:",
-  "planetary": "&emsp;Planetary&emsp;",
+  "planetary": "&emsp;Vehículo&emsp;",
   "planetaryvehiculecritical": "Planetary Vehicle Critical",
-  "planetaryvehiculedetails": "Planetary Vehicle Details",
+  "planetaryvehiculedetails": "Detalles vehículo planetario",
   "player:": "Jugador:",
   "playergroupsheet": "&emsp;Player Group Sheet&emsp;",
   "playername": "Nombre del jugador:",
   "polismassannvc": "Polis Massan (Without Vocal Chords)",
   "polismassanvc": "Polis Massan (With Vocal Chords)",
   "politico": "Politico",
-  "port": "Port",
+  "port": "Babor",
   "positionrole:": "Position/Role:",
   "powername": "Nombre del poder",
   "powersummary": "Resumen del poder",
@@ -523,7 +523,7 @@
   "rodian": "Rodian",
   "role": "Role",
   "rollcritical": "Roll Critical",
-  "rolldestiny": "Roll Destiny",
+  "rolldestiny": "Tirar Destino",
   "saboteur": "Saboteur",
   "safehouse": "Safe House",
   "sage": "Sage",
@@ -551,7 +551,7 @@
   "short": "Short",
   "showsuggestionsbutton": "Show Suggestions Button",
   "signatureablities": "Signature Abilities",
-  "silhouette": "Silhouette",
+  "silhouette": "Silueta",
   "skill": "Habilidad",
   "skill:": "Habilidad:",
   "skilllist": "Lista de habilidades",
@@ -561,9 +561,9 @@
   "skillstalentsweaponspowers": "Skills, Talents, Weapons &amp; Powers",
   "skillsuggestions": "Skill Suggestions",
   "skillsuggestionsdisplay": "Skill Suggestions Display",
-  "skulduggery": "Skulduggery",
-  "Skulduggery": "Skulduggery",
-  "skulduggerycun": "Skulduggery (Cun)",
+  "skulduggery": "Actividad Criminal",
+  "Skulduggery": "Actividad Criminal",
+  "skulduggerycun": "Actividad Criminal (Ast)",
   "slicer": "Slicer",
   "smuggler": "Smuggler",
   "soak": "Protección",
@@ -574,15 +574,15 @@
   "special:": "Special:",
   "specialization": "Specialization",
   "specializationattached": "Specialization attached?",
-  "species:": "Species:",
+  "species:": "Especie:",
   "specificdetails": "Specific Details",
-  "speed": "Speed",
+  "speed": "Velocidad",
   "spendingsuggestions": "Spending Suggestions",
   "spy": "Spy",
   "squadronleader": "Squadron Leader",
-  "starboard": "Starboard",
+  "starboard": "Estribor",
   "starfighterace": "Starfighter Ace",
-  "starship": "&emsp;Starship&emsp;",
+  "starship": "&emsp;Nave&emsp;",
   "starshipcritical": "Starship Critical",
   "stats": "Stats",
   "stealth": "Sigilo",
@@ -602,7 +602,7 @@
   "survivalcun": "Supervivencia (Ast)",
   "survivalist": "Survivalist",
   "syncpoolgm": "Sincronizar reserva con el DJ",
-  "sysstrain": "Sys Strain",
+  "sysstrain": "Tensión de sistemas",
   "tactician": "Tactician",
   "talentsandabilities": "Talents &amp; Abilities",
   "talentsandspecialabilities": "Talents and Special Abilities",
@@ -610,7 +610,7 @@
   "technician": "Technican",
   "terrain:": "Terrain:",
   "thief": "Thief",
-  "threshold": "Threshold",
+  "threshold": "Umbral",
   "timeshandled:": "Times Handled:",
   "timeshandledstrengh:": "Times Handled (Strength):",
   "timeshandledweakness:": "Times Handled (Weakness):",
@@ -632,11 +632,11 @@
   "Underworld": "Bajos fondos",
   "underworldint": "Bajos fondos (Int)",
   "universal": "Universal",
-  "upgrade": "&nbsp;&nbsp;&nbsp;&nbsp;Upgrade:",
+  "upgrade": "&nbsp;&nbsp;&nbsp;&nbsp;Incrementar:",
   "upgrades": "Upgrades",
   "upgradetype:": "Upgrade Type:",
-  "usedarkside": "Use Dark Side &#8594;",
-  "uselight": "&#8592; Use Light Side",
+  "usedarkside": "Usar el Lado Oscuro &#8594;",
+  "uselight": "&#8592; Usar Lado Luminoso",
   "value": "Value",
   "value:": "Value:",
   "vehiculesheet": "Vehicle Sheet",
@@ -660,7 +660,7 @@
   "weaknessdetails:": "Weakness Details:",
   "weapon": "Weapon",
   "weaponname": "Weapon Name",
-  "weapons": "Weapons",
+  "weapons": "Armas",
   "weapontype:": "Weapon Type:",
   "weekay": "Weequay",
   "whatkindofslot": "What kind of Initiative Slot?",
