--- a/TheWitcher/translations/fr.json
+++ b/TheWitcher/translations/fr.json
@@ -4,21 +4,21 @@
     "count-x2-skills": "COUNT x2 SKILLS",
     "maximum-current": "Maximum / Actuel",
     "int-u": "INT",
-    "ref-u": "REF",
+    "ref-u": "RÉF",
     "dex-u": "DEX",
     "body-u": "BODY",
-    "spd-u": "SPD",
+    "spd-u": "VIT",
     "emp-u": "EMP",
     "cra-u": "CRA",
-    "will-u": "WILL",
+    "will-u": "VOL",
     "luck-u": "LUCK",
     "stat-tota-u": "TOTAL STAT",
-    "name-u": "NAME",
-    "age-u": "AGE",
+    "name-u": "NOM",
+    "age-u": "ÂGE",
     "race-u": "RACE",
-    "gender-u": "GENDER",
+    "gender-u": "SEXE",
     "prof-u": "PROF",
-    "origin-u": "ORIGIN",
+    "origin-u": "ORIGINE",
     "note-wound-threshold": "Note : Le seuil de blessure et l'état de mort sont automatiquement appliqués. Augmentez les PV 'Courants' au-dessus de votre 'Seuil de Blessure' pour voir les statistiques à leur pleine valeur.",
     "stun-u": "STUN",
     "run-u": "RUN",
@@ -28,10 +28,10 @@
     "resolv-u": "PERSÉVÉRANCE",
     "wound-threshol-u": "SEUIL DE BLESSURE",
     "bonus-melee-dmg-u": "BONUS AUX DÉG. DE MÊLÉE",
-    "skills-modifier-u": "SKILLS & MODIFIERS",
+    "skills-modifier-u": "COMPÉTENCES & MODIFICATEURS",
     "profession-skill-u": "COMPÉTENCES EXCLUSIVES",
     "gear-inventor-u": "GEAR & INVENTORY",
-    "magic-spell-u": "MAGIC & SPELLS",
+    "magic-spell-u": "MAGIE & SORTS",
     "backgroun-u": "HISTORIQUE",
     "intelligence-u": "INTELLIGENCE",
     "awarenes-u": "VIGILANCE",
@@ -73,7 +73,7 @@
     "sleight-of-han-u": "ADRESSE",
     "stealt-u": "FURTIVITÉ",
     "skill-tota-u": "TOTAL COMP.",
-    "skills-u": "SKILLS",
+    "skills-u": "COMPÉTENCES",
     "physiqu-u": "PHYSIQUE",
     "enduranc-u": "RÉSILIENCE",
     "empath-u": "EMPATHIE",
@@ -125,16 +125,16 @@
     "-will-u": "(VOL)",
     "skill-leve-u": "NIVEAU DE COMPÉTENCE",
     "equipped-weapon-u": "ARMES ÉQUIPÉES",
-    "weapons-u": "WEAPONS",
+    "weapons-u": "ARMES",
     "reliabilit-u": "FIABILITÉ",
     "w-accuracy-u": "W. ACCURACY",
-    "range-u": "RANGE",
+    "range-u": "PORTÉE",
     "bonus-dmg-u": "BONUS AUX DÉG. ?",
-    "yes-u": "YES",
-    "damage-u": "DAMAGE",
+    "yes-u": "OUI",
+    "damage-u": "DÉGÂTS",
     "type-u": "TYPE",
-    "one-handed-u": "ONE-HANDED",
-    "two-handed-u": "TWO-HANDED",
+    "one-handed-u": "UNE MAIN",
+    "two-handed-u": "DEUX MAINS",
     "s-p-sword-u": "S/P (SWORD)",
     "s-p-small-blade-u": "S/P (SMALL BLADE)",
     "s-b-small-blade-u": "S/B (SMALL BLADE)",
@@ -179,7 +179,7 @@
     "item-note-u": "NOTES DE L'OBJET",
     "diagram---recipe-note-u": "NOTES DE DIAGRAMMES & FORMULES",
     "statu-u": "STATUT",
-    "unlearned-u": "UNLEARNED",
+    "unlearned-u": "NON APPRIS",
     "have-diagram-u": "HAVE DIAGRAM",
     "learned-u": "LEARNED",
     "alchemical-substanc-u": "SUBSTANCE ALCHIMIQUE",
@@ -194,8 +194,8 @@
     "fulgur-u": "FULGUR",
     "component-name-u": "COMPONENT NAME",
     "novice-spells-signs-invocation-u": "NOVICE - SPELLS, SIGNS & INVOCATIONS",
-    "sign-u": "SIGN",
-    "spell-u": "SPELL",
+    "sign-u": "SIGNE",
+    "spell-u": "SORT",
     "invocatio-u": "INVOCATION",
     "sta-cos-u": "COÛT END.",
     "non-u": "AUCUN(E)",
@@ -257,11 +257,11 @@
     "days-u": "DAYS",
     "perks-racials-campaign-note-u": "PERKS, RACIALS & CAMPAIGN NOTES",
     "additional-race-profession-details": "Notes supplémentaires sur les détails de race/profession et la campagne...",
-    "threat-u": "THREAT",
+    "threat-u": "MENACE",
     "bounty-u": "BOUNTY",
-    "environment-u": "ENVIRONMENT",
+    "environment-u": "ENVIRONNEMENT",
     "organisation-u": "ORGANISATION",
-    "height-u": "HEIGHT",
+    "height-u": "TAILLE",
     "abilities-u": "ABILITIES",
     "ability-details": "Le détail des capacités va ici...",
     "vulnerabilitie-u": "VULNÉRABILITÉS",
