--- a/Anima-Beyond-Fantasy/translations/fr.json
+++ b/Anima-Beyond-Fantasy/translations/fr.json
@@ -39,13 +39,14 @@
 	"cowardice": "Lâcheté",
 	"honor": "Honorabilité",
 	"infamy": "Infamie",
-	"talent": "Talent",		
+	"talent": "Talent",
 	"all-action-modifier": "Modificateurs",
+	"number-of-actions": "Number of actions",
 	"natura": "Natura",
 	"gnosis": "Gnose",
 	"race-natura": "Natura de Race",
 	"total-natura": "Natura Total",
-	"destiny-points": "Destiny Points",								
+	"destiny-points": "Destiny Points",
 	"characteristics": "Caractéristiques",
 	"ability": "Ability",
 	"magic-ability": "Carac. Magique",
@@ -145,7 +146,7 @@
 	"track": "Pistage",
 	"animals": "Animaux",
 	"appraisal": "Estimation",
-	"architecture": "Architecture",					
+	"architecture": "Architecture",
 	"herbal-lore": "Herboristerie",
 	"history": "Histoire",
 	"law": "Loi",
@@ -464,7 +465,7 @@
 	"+1-PP/3-level": "+1 PPP/3 niveau",
 	"+1-PP/2-level": "+1 PPP/2 niveau",
 	"+1-PP/1-level": "+1 PPp/1 niveau",
-	"zeon-per-level": "Zeon/niveau",							
+	"zeon-per-level": "Zeon/niveau",
 	"summon-per-level": "Convoquer/niveau",
 	"control-per-level": "Dominer/niveau",
 	"bind-per-level": "Lier/niveau",
