--- a/Anima-Beyond-Fantasy/translations/fr.json
+++ b/Anima-Beyond-Fantasy/translations/fr.json
@@ -17,11 +17,11 @@
 	"race": "Race",
 	"class": "Classe",
 	"age": "Âge",
-	"level": "Niveau",
+	"level": "Niv.",
 	"development-points": "PF",
 	"presence": "Présence",
 	"xperience-points": "XP",
-	"level-next": "Niv. Suivant",
+	"level-next": "N. Suivant",
 	"resistances": "Résistances",
 	"type": "Type",
 	"physical-resistance": "Resistance Physique",
@@ -252,6 +252,7 @@
 	"minimum-difficulty": "Min. Diff.",
 	"maintained-powers": "Pouvoirs Maintenus",
 	"number-of-innate-slots": "# Emplacements Innés",
+	"number-of-actions": "Nombre d'actions",
 	"value": "Valeur",
 	"effects": "Effets",
 	"effect": "Effet",
@@ -437,12 +438,12 @@
 	"copper-coins": "Pièces de cuivre",
 	"silver-coins": "Pièces d'argent",
 	"gold-coins": "Pièces d'or",
-	"open-roll-range": "Portée du jet ouvert",
+	"open-roll-range": "Jets Ouverts",
 	"open-roll-no": "Jet Ouvert N°",
 	"open-roll": "Jet Ouvert",
 	"fumble": "Fumble",
 	"doubles": "Doubles",
-	"fumble-range": "Portée des échecs critiques",
+	"fumble-range": "Échecs Critiques",
 	"character-options": "Options de personnage",
 	"whisper-rolls": "MP ?",
 	"never": "Jamais",
@@ -457,13 +458,15 @@
 	"attack-per-level": "Attaque/niveau",
 	"block-per-level": "Parade/niveau",
 	"dodge-per-level": "Esquive/niveau",
-	"wear-armor-per-level": "Port d'armure/niveau",
+	"wear-armor-per-level": "P. d'Armure/niveau",
 	"initiative-per-level": "Initiative/niveau",
-	"life-points-per-level": "Points de vie/niveau",
+	"life-points-per-level": "PV/niveau",
 	"martial-knowledge-per-level": "DI/niveau",
 	"innate-psychic-points-per-level": "PPP/niveau",
 	"+1-PP/3-level": "+1 PPP/3 niveau",
 	"+1-PP/2-level": "+1 PPP/2 niveau",
+	"+1-PP/1-level": "+1 PPP/1 niveau",
+	"zeon-per-level": "Zeon/niveau",							
 	"+1-PP/1-level": "+1 PPp/1 niveau",
 	"zeon-per-level": "Zeon/niveau",
 	"summon-per-level": "Convoquer/niveau",
